 - Replaced Series and AbstractSeries by a single Series class.
 - Added a setMatchingMode() method on Template.
 - Added new constructor to Route taking a custom instance of Template.
 - Added protected getTargetRef(Req, Resp) and rewrite(Repr) methods to Redirector to allow 
   more customization.
 - Added "port" property to the ClientInfo class.
  
[Enhancements] 
 - Added support for the IDENT protocol (see RFC 1413) in order to log more info about users.
   This is especially useful when a pool of computers shares the same IP address.
 - Updated Jetty to version 6.1 RC2.
 
1.0 beta 23 (2006-12-19)
[Bugs fixed]
 - Fixed several documentation typos. Reported by John D. Mitchell and Peter Murray.
 - Fixed issue with "sub-tagged" Language metadata (like "en-us"), sub-tag comparison must
   ignore the case. Reported by Jeff Walter and Andrew Barnes. Contributed by Thierry Boileau.
 - Fixed issues in parsing of "accept*" HTTP headers. Added unit tests. Reported by AJ Barnes and Jeff Walter.
 - Fixed potential NPE in HostScorer.
 - Fixed RDF media type from "application/rdf-xml" to "application/rdf+xml". Reported by Aldo Bucchi.
 - Made VirtualHost-based routing case-insensitive. Suggested by Thierry Boileau.
 - The Request class now ensures that a referrer reference don't include a fragment. Reported by Thierry Boileau.
 - Added list of variants references in the body of a 406 message. Reported by Thierry Boileau.
 
[API changes]
 - Added attachDefault(Restlet) method to Router class. The detach() method now also detaches the default scorer.
 - Deprecated the StringTemplate mechanism, replaced by a more seamless ReferenceTemplate approach,
   less intrusive. The following classes were deprecated and will be removed in the next
   release: StringTemplate, StringTemplateRepresentation, CallModel, Model, MapModel.
 - Renamed ReferenceList.getRepresentation() to getTextRepresentation().
 - Tag now extends Metadata, getOpaqueTag() was deprecated, use getName() instead.