@@ -23,7 +23,6 @@ import java.net.ServerSocket;
 import org.restlet.Server;
 import org.restlet.data.Protocol;
 
-import simple.http.BufferedPipelineFactory;
 import simple.http.PipelineHandlerFactory;
 import simple.http.connect.ConnectionFactory;
 
@@ -55,7 +54,7 @@ public class HttpServerHelper extends SimpleServerHelper {
                 new SimpleProtocolHandler(this), getDefaultThreads(),
                 getMaxWaitTimeMs()));
         setConnection(ConnectionFactory.getConnection(getHandler(),
-                new BufferedPipelineFactory()));
+                new SimplePipelineFactory()));
         getConnection().connect(getSocket());
         super.start();
     }
